updated codes in these files

--- a/dbt/profiles.yml
+++ b/dbt/profiles.yml
@@ -5,7 +5,7 @@ Fakestore:
             type: postgres
             host: host.docker.internal
             user: postgres
-            password: 'your postgres password'
+            password: 'your password'
             port: 5432
             dbname: Fakestore
             schema: public
